# gilded_rose_kata

./: CHANGELOG.md  README.md  gilded-rose-kata.cabal
.github/workflows/: haskell.yml
app/: GildedRose.hs  Main.hs
test/: MainSpec.hs
